<resources xmlns:android="http://schemas.android.com/tools">
    <string name="app_name">Prevención Drogas Ec</string>
    <string name="action_settings">Configuración</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="txtEfectos1">A corto plazo: hipertensión, arritmias cardiacas, infartos de miocardio, ruptura de la aorta, hemorragia en los alveolos pulmonares, neumotórax, trombosis pulmonar y reacción de hipersensibilidad pulmonar, pérdida del olfato, abortos espontáneos, muerte fetal, se puede producir insuficiencia renal.
A largo plazo: gangrena intestinal (cocaína ingerida), complicaciones otorrinolaringológicas, debido al consumo esnifado produce rinitis crónica hasta producir erosiones o perforaciones del tabique nasal, depresión, ansiedad, paranoias, conductas violentas, psicosis, pérdida del sentido de la realidad, alucinaciones auditivas, reacciones alérgicas en piel (cocaína inyectada), infecciones por la vía de consumo: hepatitis b, sida.
    </string>
    <string name="txtRiesgos1">Las personas que consumen cocaína también se exponen al riesgo de contraer el VIH, aun cuando no compartan las agujas y otras drogas. Esto se debe a que la intoxicación por cocaína afecta el juicio y puede llevar a comportamientos sexuales riesgosos.
La cocaína es más peligrosa cuando se combina con otras drogas o con el alcohol (policonsumo de drogas). Por ejemplo, la combinación de cocaína y heroína (conocido como un “speedball”), lleva un riesgo particularmente alto de sobre-dosis fatal.
    </string>
    <string name="txtAbstinencia1">El síndrome de abstinencia se observa a las pocas horas o días de disminuir o eliminar su ingesta. Los síntomas fundamentales son la disforia, fatiga, insomnio o hipersomnia, incremento del apetito, retardo o agitación psicomotriz.
    </string>
    <string name="txtDependencia1">La cocaína tiene un efecto de muy corta duración en el organismo, produce taquifilaxia (tolerancia a los fármacos), y para mantener los mencionados efectos se requiere administraciones frecuentes. La dependencia avanzada se caracteriza por la falta de voluntad para dejar de consumir y un incremento en el deseo de consumir y puede incurrir en actividades como robo, prostitución para obtener la sustancia.
El consumo repetido a menudo también crea tolerancia a la cocaína. Los consumidores de cocaína tratan en vano de conseguir que la droga les produzca el mismo placer que sintieron la primera vez que la usaron.
    </string>
    <string name="txtIntoxicacion1">La intoxicación aguda se caracteriza por: palpitaciones, bradicardia o taquicardia, arritmias, hipertensión e infarto de miocardio, entre otros.
    </string>
    <string name="txtEfectos2">El consumo de cannabis produce generalmente un efecto bifásico. Tras una fase inicial de estimulación (euforia, bienestar, aumento de la percepción, ansiedad), le sigue una fase donde predomina la sedación (relajación, somnolencia, sueño). Se produce una agudización de las percepciones visuales, auditivas y táctiles, así como una ligera distorsión del espacio y tiempo. También aparece risa fácil, locuacidad y aumento del apetito. Paralelamente se altera la memoria reciente, y existe dificultad en la concentración, disminución de la atención e incoordinación motora. En algunos sujetos, especialmente en inexpertos o tras dosis elevadas puede aparecer ansiedad, disforia, síntomas paranoides y/o pánico, que habitualmente desaparecen de forma espontánea en pocas horas.
    </string>
    <string name="txtRiesgos2">La marihuana deteriora la memoria a corto plazo (de sucesos recientes) y, por lo tanto, dificulta la realización de tareas complejas. Con el uso de las variedades más potentes de la droga, pueden surgir problemas para realizar incluso tareas sencillas. Debido a los efectos de la droga sobre las percepciones y los reflejos, también puede ser causa de accidentes de tráfico. El uso de esta droga aumenta la propensión a conductas de riesgo para adquirir enfermedades de transmisión sexual, incluida la adquisición del VIH. Se sabe que existe una fuerte relación entre el uso de drogas y las prácticas sexuales peligrosas.
    </string>
    <string name="txtAbstinencia2">El síndrome de abstinencia se caracteriza por irritabilidad, agresividad, inquietud, nerviosismo, ansiedad, disminución o pérdida del apetito y dificultades para dormir. Este síndrome puede aparecer a los 3-7 días de cesar el consumo y suele resolverse pasados unos 28 días.
    </string>
    <string name="txtDependencia2">La dependencia de la marihuana parece ser muy similar a otros trastornos presentes en otras sustancias, sin embargo estos pueden ser menos graves. Es importante señalar que la dependencia de la marihuana es más frecuente entre los pacientes que sufren de otros trastornos psiquiátricos, en particular entre las poblaciones de adolescentes y adultos jóvenes.
    </string>
    <string name="txtIntoxicacion2">La intoxicación por cannabis puede presentarse por el grado de concentración deTHC, la falta de experiencia y el uso de la vía oral son circunstancias que facilitan su aparición. Sus síntomas son: taquicardia, síntomas vegetativos (palidez cutánea, sudoración, náuseas, dolor abdominal, que puede llegar a desencadenar un síncope. Pero la intoxicación aguda por cannabis puede presentarse como un cuadro con predominio de síntomas de tipo psicológico como: disforia, ansiedad, inquietud, agitación psicomotora, dificultad para seguir el curso del pensamiento, alteraciones en la percepción temporal.
    </string>
    <string name="txtEfectos3">Los efectos de fumar pasta base de cocaína se pueden dividir en 4 etapas:

Euforia: se observa sensación de placer, hipervigilancia, hiperexcitabilidad, éxtasis, cambios en los niveles de atención, aceleración de los procesos de pensamiento. Cuando las dosis ingeridas son bajas, estos procesos se mantienen coherentes. Además se produce una disminución notable del apetitito, la fatiga y el sueño.
Entre los cambios físicos se produce un aumento de presión sanguínea, ritmo cardíaco, temperatura corporal y ritmo respiratorio.

Disforia, la persona empieza a sentirse angustiada, deprimida e insegura, con un deseo incontenible de seguir fumando, tristeza, apatía, entre otras.
Consumo ininterrumpido para evitar la etapa dos.
Psicosis y alucinaciones. Las alucinaciones pueden ser visuales, cutáneas, auditivas y olfatorias. La psicosis presenta agitación, ideas paranoides, agresividad, alucinaciones, entre otros, estos episodios pueden durar semanas o meses.

Los efectos físicos son: pérdida de peso, palidez, taquicardia, insomnio, verborrea, midriasis (dilatación de la pupila). Algunas personas presentan náuseas, vómitos, sequedad en la boca, sudor, diarrea, temblor, agitación psicomotora, picazón, hipertensión arterial, fiebre, falta de coordinación, dolor de cabeza, mareos, entre otros.
    </string>
    <string name="txtRiesgos3">La PBC es una sustancia muy adictiva. Esto porque la excitación y el bienestar que provoca son muy breves, lo que se acompaña inmediatamente de una fuerte sensación de angustia. Y evitarla es el motivo para seguir consumiendo PBC.
    </string>
    <string name="txtAbstinencia3">La abstinencia se caracteriza porque se presenta un comportamiento antisocial, déficit de la memoria, fatiga de la atención, desinterés a nivel laboral y académico, entre otros.
    </string>
    <string name="txtDependencia3">Las cualidades adictivas de esta sustancia se caracterizan por producir una sensación inicial de excitación y bienestar de corta duración, lo que ocasiona angustia al consumidor y lo lleva a aumentar la frecuencia y dosis de la misma con el fin de evitar el malestar que se produce cuando se esta se elimina de los centros nerviosos.La tolerancia de la pasta base puede desarrollarse en formas diferentes: cambios metabólicos, neuronales, físicos, psicológicos, esto da lugar a la necesidad de incrementar la cantidad y/o frecuencia  en el consumo de la sustancia para obtener el placer inicial.
    </string>
    <string name="txtIntoxicacion3">Los síntomas son: hipertensión arterial, accidentes vasculares, sinusitis, bronquitis, lesión pulmonar, disnea, broncoespasmo, euforia, disforia, síntomas psicóticos como alucinaciones y paranoias, irritabilidad e impulsividad, problemas en el embarazo.
    </string>
    <string name="txtEfectos4">Después de una inyección endovenosa de heroína, el usuario presenta una oleada de euforia (“rush”) acompañada de sequedad en la boca, enrojecimiento caliente de la piel, pesadez en las extremidades y confusión mental. Después de esta euforia inicial, el usuario pasa a una sensación de estar volando (“on the nod”), un estado en el que se alterna entre estar completamente despierto y adormecido. Los usuarios que no se inyectan la droga podrían no sentir la euforia inicial, pero los demás efectos son los mismos.
    </string>
    <string name="txtRiesgos4">Las vías de administración de la sustancia pueden provocar el contagio y transmisión de enfermedades tales como: hepatitis, el VIH, tuberculosis, de transmisión sexual u otras enfermedades. La inyección puede colapsar las venas, causar infección en el revestimiento del corazón o en las válvulas o crear abscesos. Si no se trata, la mayoría de estas condiciones pueden progresar y convertirse en enfermedades más graves que producen la muerte.
    </string>
    <string name="txtAbstinencia4">Los síntomas se caracterizan por: bostezos, midriasis, rinorrea, dolor muscular, náuseas, vómitos, diarrea, fiebre, insomnio, inquietud, ansiedad, entre otros. El síndrome depresivo es una manifestación más de la abstinencia y produce, en algunos casos, sensación de muerte inminente que, junto a la intensidad de los síntomas, llega a impedir la superación de este proceso y es causa de muchas de las recaídas.
    </string>
    <string name="txtDependencia4">El consumo problemático de la heroína produce dependencia física y psicológica. Si el consumidor problemático disminuye o suspende abruptamente el consumo de la sustancia, puede experimentar síntomas tales como dolor muscular y óseo, insomnio, diarrea, vómito, escalofríos, movimientos en forma de patadas (“kicking the habit”). Una vez se ha desarrollado tolerancia a la heroína, se necesita incrementar la dosis para conseguir el mismo efecto.
    </string>
    <string name="txtIntoxicacion4">La intoxicación por analgésicos opioides, se caracteriza por la triada: miosis (pupilas puntiformes), depresión respiratoria y coma. Produce paro respiratorio, respiración lenta y forzada, boca seca, pupilas extremadamente pequeñas (“pupilas puntiformes), decoloración de la lengua, presión arterial baja, pulso débil, labios y uñas azuladas, estreñimiento, espasmos estomacales y del tubo digestivo, delirio, desorientación, somnolencia, espasticidad muscular. El edema agudo de pulmón es la complicación más frecuente de la sobredosis de heroína.
    </string>
    <string name="action_sign_in_short">Registrar</string>
    <string name="email">Alias</string>
    <string name="hint_email">Alias</string>
    <string name="hint_password">Clave</string>
    <string name="btn_login">Ingresar</string>
    <string name="btn_link_to_register">No estas registrado? Registrate ahora, es gratis!</string>
    <string name="btn_link_to_login">Ya estas registrado?, Logueate!</string>
</resources>