<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Daniel Peñarreta.
  ~ Copyright (c) 2016.  All rights reserved.
  -->

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.seted.prevencionec.ui.LoginActivity">

    <TableRow
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/primaryColor"
        android:padding="5dp"
        android:id="@+id/tableRow">

        <ImageButton
            android:id="@+id/btnHome"
            android:layout_width="30dp"
            android:layout_height="wrap_content"
            android:padding="1dip"
            android:layout_marginLeft="15dip"
            android:scaleType="fitCenter"
            android:src="@drawable/btnhome"
            android:adjustViewBounds="true"
            android:background="@color/primaryColor"
            android:layout_marginTop="5dp" />

        <TextView
            android:text="Chat en Linea SETED"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView17"
            android:textSize="22dip"
            android:textStyle="bold"
            android:textColor="#fff"
            android:gravity="center"
            android:layout_margin="5dp"/>
    </TableRow>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:background="#fff"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/activity_horizontal_margin"
        android:layout_marginTop="45dp">


        <ImageView
            android:layout_width="@dimen/logo_w_h"
            android:layout_height="@dimen/logo_w_h"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:src="@drawable/logologin" />

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:textColor="#1C1C1C"
                android:textColorHint="@color/primaryColor"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:textColor="#1C1C1C"
                android:textColorHint="@color/primaryColor" />
        </android.support.design.widget.TextInputLayout>

        <!-- Login Button -->

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@color/primaryColor"
            android:text="@string/btn_login"
            android:textColor="@android:color/white"
            android:textStyle="bold"
            android:textSize="17dp"/>

        <!-- <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_forgot_password"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent" />

        Link to Login Screen -->

        <Button
            android:id="@+id/btn_signup"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dip"
            android:background="@null"
            android:text="@string/btn_link_to_register"
            android:textAllCaps="false"
            android:textColor="#000"
            android:textSize="16dp" />
    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_gravity="center|bottom"
        android:layout_marginBottom="20dp"
        android:visibility="gone" />
</android.support.design.widget.CoordinatorLayout>
